--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:                Set-IntSpan-Fast
-version:             v0.0.5
+version:             v0.0.6
 abstract:            Fast handling of sets containing integer spans.
-license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.31
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.32
 distribution_type:   module
 requires:     
     Class::Std:                    0
