--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Set-IntSpan-Fast
-version:             v0.0.6
+version:             0.0.7
 abstract:            Fast handling of sets containing integer spans.
 license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.32
