Import of ANDYA/Set-IntSpan-Fast-v1.0 from CPAN.
gitpan-cpan-distribution: Set-IntSpan-Fast
gitpan-cpan-version:      v1.0
gitpan-cpan-path:         ANDYA/Set-IntSpan-Fast-v1.0.tar.gz
gitpan-cpan-author:       ANDYA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Set-IntSpan-Fast
-version:             0.0.9
+version:             v1.0
 abstract:            Fast handling of sets containing integer spans.
 license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.32
