--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,14 @@
 --- #YAML:1.0
 name:                Set-IntSpan-Fast
-version:             1.0.1
+version:             1.10
 abstract:            Fast handling of sets containing integer spans.
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36
+generated_by:        ExtUtils::MakeMaker version 6.36_01
 distribution_type:   module
 requires:     
     Data::Types:                   0
     List::Util:                    0
     Test::More:                    0
-    version:                       0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.2.html
     version: 1.2
