--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,16 @@
 --- #YAML:1.0
 name:                Set-IntSpan-Fast
-version:             1.11
+version:             1.12
 abstract:            Fast handling of sets containing integer spans.
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36_01
+author:              
+    - Andy Armstrong <andy@hexten.net>
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Data::Types:                   0
     List::Util:                    0
     Test::More:                    0
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Andy Armstrong <andy@hexten.net>
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
